--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js"></script>
+    <script src="common.js"></script>
   </head>
   <body>
     <h1>Измеритель длины текста</h1>
