--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Измеритель длины текста</title>
+    <title>Анализатор текста</title>
     <style>
       body {
         padding: 40px;
@@ -40,7 +40,7 @@
     <script src="common.js"></script>
   </head>
   <body>
-    <h1>Измеритель длины текста</h1>
+    <h1>Анализатор текста</h1>
     <p class="fw-lighter">
       Введите текст в поле ниже, и система измерит и покажет его длину.
     </p>
